--- a/SS5_Form_Table_Html/bai_tap/ThoiKhoaBieu.css
+++ b/SS5_Form_Table_Html/bai_tap/ThoiKhoaBieu.css
@@ -4,6 +4,7 @@
     border: black solid 1px;
     boder-collapse: collapse;
     border-spacing: 1px;
+
     width: 100%;
 }
 
@@ -14,9 +15,9 @@
 
 
 .thu 3
-{
+{background: yellow;
 
-    background: yellow;
+
 
 
 }
